[gd_scene load_steps=11 format=2]

[ext_resource path="res://components/Puke.gd" type="Script" id=1]
[ext_resource path="res://assets/UI/puke.png" type="Texture" id=2]
[ext_resource path="res://components/InteractableArea.gd" type="Script" id=3]
[ext_resource path="res://assets/UI/ui_smiley_2.png" type="Texture" id=4]

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
flags_unshaded = true
albedo_texture = ExtResource( 2 )

[sub_resource type="QuadMesh" id=5]
material = SubResource( 4 )
size = Vector2( 4, 4 )

[sub_resource type="CylinderShape" id=3]
radius = 1.55035
height = 1.05774

[sub_resource type="ParticlesMaterial" id=6]
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
scale_random = 0.5

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
flags_unshaded = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 4 )

[sub_resource type="QuadMesh" id=8]
material = SubResource( 7 )
size = Vector2( 2, 2 )

[node name="Puke" type="Spatial"]
script = ExtResource( 1 )

[node name="Mesh" type="MeshInstance" parent="."]
transform = Transform( 0.707107, -0.707107, -3.09086e-008, 0, -4.37114e-008, 1, -0.707107, -0.707107, -3.09086e-008, 0, 0.02, 0 )
mesh = SubResource( 5 )
material/0 = null

[node name="InteractableArea" type="Area" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource( 3 )
interact_id = 4

[node name="CollisionShape" type="CollisionShape" parent="InteractableArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 3 )

[node name="CleanUpTween" type="Tween" parent="."]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="SmileyParticles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, 1, 0, -1, -4.37114e-008, 0, 0.5, 0 )
emitting = false
amount = 1
lifetime = 0.5
one_shot = true
speed_scale = 0.4
explosiveness = 0.24
process_material = SubResource( 6 )
draw_pass_1 = SubResource( 8 )
